# Dating-App-Matchmaker

./: ARCHITECTURE_DIAGRAM.md  README.md  pyproject.toml  run.py
cupid/model/: architecture.py  data_processor.py  helper.py  main.py  model_nameMF_1V_lr0.005_wd0.0_epoch26
cupid/model/data/: Profile.csv  User.csv
cupid/server/: main.py
models/: autoencoder.pth  mappings.pkl  matching_model.pth
scripts/: hello.ipynb  wedata_Chien.ipynb
