[project]
name = "cupid-matchmaker"
version = "0.1.0"
description = "the best matchmaker for chula students"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.0",
    "numpy>=2.3.0",
    "torch>=2.7.1",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "kagglehub>=0.2.0",
]
